--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,14 +18,6 @@ services:
     ports: # still exposed for admin access
       - ${FUSEKI_HOST_PORT:-8081}:3030
 
-  harvest:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-harvest:main
-    env_file:
-      - .env
-    volumes:
-       - harvest-data:/var/lib/harvest
-    command: tail -f /dev/null
-
   kafka:
     image: bitnami/kafka:2.5.0
     env_file:
@@ -40,7 +32,7 @@ services:
       - "zookeeper"
 
   kafka-init:
-    image: gcr.io/ucdlib-pubreg/rp-kafka-init:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-kafka-init:jm-gcs
     env_file:
       - .env
     depends_on:
@@ -71,54 +63,54 @@ services:
     restart: on-failure
 
   gateway:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-gateway:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs:jm-gcs
     env_file:
       - .env
     ports:
       - ${HOST_PORT:-8080}:3000
     restart: on-failure
+    command: npm run gateway
 
   auth:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-auth-cas:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs
     env_file:
       - .env
     environment:
       - CAS_URL=${CAS_URL:-https://ssodev.ucdavis.edu/cas}
     restart: on-failure
+    command: npm run auth-cas
 
   api:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-api:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs
     env_file:
       - .env
     restart: on-failure
-
-  debouncer:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-kafka-debouncer:sandbox
-    env_file:
-      - .env
-    restart: on-failure
+    command: npm run api
 
   indexer:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-es-indexer:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs
     env_file:
       - .env
     ports:
       - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
+    command: npm run es-indexer
 
   status:
-    image: gcr.io/ucdlib-pubreg/rp-index-status:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs
     env_file:
       - .env
     restart: on-failure
+    command: npm run status
 
   models:
-    image: gcr.io/ucdlib-pubreg/rp-ucd-es-models:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-node-services:jm-gcs
     env_file:
       - .env
     ports:
       - ${MODELS_HOST_PORT:-8084}:3000
     restart: on-failure
+    command: npm run es-models
 
 volumes:
   es-data:
@@ -127,4 +119,3 @@ volumes:
   zookeeper-data:
   zookeeper-datalog:
   redis-data:
-  harvest-data:
