--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,14 +18,6 @@ services:
     ports: # still exposed for admin access
       - ${FUSEKI_HOST_PORT:-8081}:3030
 
-  harvest:
-    image: {{HARVEST_IMAGE_NAME}}:{{HARVEST_TAG}}
-    env_file:
-      - .env
-    volumes:
-       - harvest-data:/var/lib/harvest
-    command: tail -f /dev/null
-
   kafka:
     image: {{KAFKA_IMAGE_NAME}}:{{KAFKA_TAG}}
     env_file:
@@ -71,54 +63,54 @@ services:
     restart: on-failure
 
   gateway:
-    image: {{GATEWAY_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME_TAG}}:{{VESSEL_TAG}}
     env_file:
       - .env
     ports:
       - ${HOST_PORT:-8080}:3000
     restart: on-failure
+    command: npm run gateway
 
   auth:
-    image: {{AUTH_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
     environment:
       - CAS_URL=${CAS_URL:-https://ssodev.ucdavis.edu/cas}
     restart: on-failure
+    command: npm run auth-cas
 
   api:
-    image: {{API_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
     restart: on-failure
-
-  debouncer:
-    image: {{DEBOUNCER_IMAGE_NAME}}:{{VESSEL_TAG}}
-    env_file:
-      - .env
-    restart: on-failure
+    command: npm run api
 
   indexer:
-    image: {{INDEXER_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
     ports:
       - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
+    command: npm run es-indexer
 
   status:
-    image: {{STATUS_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
     restart: on-failure
+    command: npm run status
 
   models:
-    image: {{MODEL_IMAGE_NAME}}:{{VESSEL_TAG}}
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
     ports:
       - ${MODELS_HOST_PORT:-8084}:3000
     restart: on-failure
+    command: npm run es-models
 
 volumes:
   es-data:
@@ -127,4 +119,3 @@ volumes:
   zookeeper-data:
   zookeeper-datalog:
   redis-data:
-  harvest-data:
