--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -93,8 +93,23 @@ services:
       - .env
     ports:
       - ${INDEXER_HOST_PORT:-8082}:3000
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/service-account.json
+    volumes:
+      - ./service-account.json:/etc/service-account.json
     restart: on-failure
     command: npm run es-indexer
+
+  gcs:
+    image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
+    env_file:
+      - .env
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/service-account.json
+    volumes:
+      - ./service-account.json:/etc/service-account.json
+    restart: on-failure
+    command: npm run gcs
 
   status:
     image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
@@ -107,8 +122,12 @@ services:
     image: {{NODE_SERVICES_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/service-account.json
     ports:
       - ${MODELS_HOST_PORT:-8084}:3000
+    volumes:
+      - ./service-account.json:/etc/service-account.json
     restart: on-failure
     command: npm run es-models
 
