--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -37,6 +37,8 @@ services:
     image: {{KAFKA_INIT_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
+    volumes:
+      - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/kafka-init/init.sh:/init.sh
     depends_on:
       - "zookeeper"
 
@@ -116,9 +118,10 @@ services:
     volumes:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/lib:/aggie-experts/lib
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/services:/aggie-experts/services
+      - ./service-account.json:/etc/service-account.json
     ports:
       - ${INDEXER_HOST_PORT:-8082}:3000
-    command: npm run api
+    command: npm run es-indexer
     # command: bash -c "tail -f /dev/null"
 
   status:
@@ -141,6 +144,8 @@ services:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/lib:/aggie-experts/lib
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/services:/aggie-experts/services
       - ./service-account.json:/etc/service-account.json
+    ports:
+      - ${INDEXER_HOST_PORT:-8085}:3000
     # command: npm run gcs
     command: bash -c "tail -f /dev/null"
 
@@ -151,6 +156,7 @@ services:
     volumes:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/lib:/aggie-experts/lib
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/node-services/services:/aggie-experts/services
+      - ./service-account.json:/etc/service-account.json
     ports:
       - ${MODEL_HOST_PORT:-8084}:3000
     command: npm run es-models
